# aether-agent

./: .gitignore  LICENSE  README.md  go.mod  go.sum  main.go
aether-ebpf/: Cargo.toml
aether-ebpf/bpf/: hallucinator.bpf.c
aether-ebpf/src/: lib.rs  maps.rs  probe.rs  shimmer.rs
aether-fs/: Cargo.toml
aether-fs/src/: fs.rs  fuse_ops.rs  layer.rs  lib.rs  materializer.rs  overlay.rs  tree.rs
aether-service/: Cargo.toml
aether-service/src/: context.rs  lib.rs  manifest.rs  registry.rs
aether-shim/: Cargo.toml
aether-shim/src/: main.rs
agent/: Cargo.toml
agent/src/: aether_net.rs  aether_watchdog.rs  main.rs  rpc.rs  sandbox.rs  version.rs
clients/elixir/: mix.exs
clients/elixir/lib/aether/: client.ex
clients/go/: go.mod
clients/go/aether/: client.go
internal/execcontext/: context.go
internal/fuse/: fuse.go
internal/logs/: logs.go
internal/manifest/: manifest.go  manifest_test.go
internal/net/: net.go
internal/network/: firewall.go
internal/permissions/: permissions.go
internal/services/filesystem/: dir.go  dir_test.go  move.go  move_test.go  remove.go  service.go  service_test.go  stat.go  stat_test.go  utils.go  utils_test.go  watch.go  watch_sync.go
internal/services/process/: connect.go  input.go  list.go  service.go  signal.go  start.go  update.go
internal/services/process/handler/: handler.go
internal/services/spec/filesystem/filesystemconnect/: filesystem.connect.go
internal/services/spec/filesystem/filesystemconnect/mocks/: mocks.go
internal/services/spec/process/processconnect/: process.connect.go
internal/tunnel/: tunnel.go
protocols/: build.rs
protocols/protos/: aether.proto
protocols/src/: aether_ttrpc.rs  lib.rs
spec/: AETHER-INTEROP-v1.md  aether-interop-v1.proto
