[package]
name = "aether-fs"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "AgentFS — the root filesystem for Æther Agent. Stacks base template + add-in layers + writable overlay into one unified tree."

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
