[package]
name = "aether-service"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Æther Agent service — manifest parsing and context file"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
