[package]
name = "aether-shim"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Æther Agent shim-loader — OCI StartContainer hook that applies effects (LD_PRELOAD + eBPF maps)"

[[bin]]
name = "aether-shim-loader"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
aether-service = { path = "../aether-service" }
